# fortune_cookie_discordBot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.in  README.md  bot.py  bot.sh  fortune.json  fortune_cookie_discordBot.spec  pyproject.toml
src/bot/: __main__.py
src/fortune_cookie/: __main__.py
src/scraper/: scrape.py
