[tool.poetry]
name = "fortune_cookie"
version = "0.1.1"
description = "fortune cookie discord bot"
authors = [ "your name <sample@sample.com>" ]

[tool.poetry.dependencies]
python = "^3.11.6"
discord = "^2.3.2"
requests = "^2.31.0"
bs4 = "0.0.1"
# Add your project dependencies here, if any.

[tool.poetry.scripts]
bot = "fortune_cookie.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




